--- a/ShoppingCart/default.htm
+++ b/ShoppingCart/default.htm
@@ -22,6 +22,7 @@
     <script src="js/shoppingCart.js" type="text/javascript"></script>
     <script src="js/app.js" type="text/javascript"></script>
     <script src="js/controller.js" type="text/javascript"></script>
+    <script src="js/strings.js" type="text/javascript"></script>
     <script type="text/javascript">
 
       var _gaq = _gaq || [];
