--- a/ShoppingCart/default.htm
+++ b/ShoppingCart/default.htm
@@ -1,7 +1,7 @@
 ﻿<!doctype html>
 <html ng-app="AngularStore">
   <head>
-    <title>Shopping Cart with AngularJS</title>
+    <title>Shopping Cart</title>
 
     <!-- jQuery, Angular -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript" ></script>
@@ -37,6 +37,7 @@
 
     </script>
     <link href="css/style.css" rel="stylesheet" type="text/css"/>
+    <link href="css/cross_selling.css" rel="stylesheet" type="text/css"/>
   </head>
 
   <body>
