--- a/ShoppingCart/default.htm
+++ b/ShoppingCart/default.htm
@@ -5,7 +5,7 @@
 
     <!-- jQuery, Angular -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript" ></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.0.5/angular.min.js" type="text/javascript"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.1.5/angular.min.js" type="text/javascript"></script>
 
     <!-- Bootstrap -->
     <link href="http://netdna.bootstrapcdn.com/twitter-bootstrap/2.3.1/css/bootstrap-combined.min.css" rel="stylesheet" type="text/css"/>
@@ -23,6 +23,7 @@
     <script src="js/app.js" type="text/javascript"></script>
     <script src="js/controller.js" type="text/javascript"></script>
     <script src="js/strings.js" type="text/javascript"></script>
+    <script src="js/filters.js" type="text/javascript"></script>
     <script type="text/javascript">
 
       var _gaq = _gaq || [];
